embed container fix on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+@media only screen and (max-width: 576px) {
+	.embed-container iframe{
+		height: 90% !important;
+	}
+}
 html {
 	position: relative;
 	min-height: 100%;
